samples/_failures_safe/1761447506_a7ae08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a873172.c:157:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  157 | void token
      | ^~~~
